<resources>
    <string name="app_name">Telegram</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_default_username">Muhammad</string>
    <string name="status">В сети</string>
    <string name="settings_text_account">Аккаунт</string>
    <string name="default_number">+9929000000596</string>
    <string name="setting_label_phone_number">Нажмите, чтоб изменить номер телефона</string>
    <string name="default_login">Kurbonov</string>
    <string name="settings_label_login">Имя пользователя</string>
    <string name="settings_default_bio">О себе</string>
    <string name="settings_label_bio">Напишите немного о себе</string>
    <string name="setting_menu_change_name">Изменить имя</string>
    <string name="setting_menu_exit">Выход</string>
    <string name="registr_enter_code">Введите код</string>
    <string name="registr_text_we_send">Мы отправили SMS с кодом проверки на ваш телефон</string>
    <string name="regist_hint_default_code">- - - - - -</string>
    <string name="regist_titlle_your_phone">Ваш телефон</string>
    <string name="registr_toast_enter_phone">Введите номер телефона</string>
    <string name="hint_enter_phone_num">Введити номер телефона</string>
    <string name="settings_input_name">Имя</string>
    <string name="settings_hint_input_surname">Фамилия</string>
    <string name="settings_toast_name_isEmpty">Имя не можеть быть пустым</string>
    <string name="toast_data_update">Данные обновлены</string>
    <string name="settings_hint_input_username">username</string>
    <string name="settings_input_bio">bio</string>
    <string name="clear_chat">Очистить чат</string>
    <string name="delete_chat">Удалить чат</string>
</resources>