<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.SettingsFragment"
    tools:ignore="ExtraText">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_header_blovk"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/setting_user_photo"
            android:layout_width="@dimen/setting_user_photo_width"
            android:layout_height="@dimen/setting_user_photo_height"
            android:layout_marginStart="@dimen/app_margin"
            android:src="@drawable/user"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/setting_full_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/app_margin"
            android:layout_marginTop="@dimen/app_small_margin"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/normaltext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/setting_user_photo"
            app:layout_constraintTop_toTopOf="@id/setting_user_photo"
            tools:text="@string/settings_default_username" />

        <TextView
            android:id="@+id/settings_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/app_margin"
            android:textColor="@color/colorAccentDark"
            android:textSize="@dimen/smalltext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/setting_user_photo"
            app:layout_constraintTop_toBottomOf="@id/setting_full_name"
            tools:text="@string/status" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/settings_text_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/app_margin"
        android:layout_marginTop="@dimen/vertical_large_marge"
        android:text="@string/settings_text_account"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/smalltext"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/settings_header_blovk" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_number_phone"
        style="@style/SettingsButtons"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_text_account">

        <TextView
            android:id="@+id/settings_phone_number"
            style="@style/normalText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/settings_btn_change_number_phone"
            tools:text="@string/default_number" />

        <TextView
            android:id="@+id/settings_label_phone_number"
            style="@style/smallText"
            android:text="@string/setting_label_phone_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_phone_number" />

        <View
            style="@style/separator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_label_phone_number" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_user_name"
        style="@style/SettingsButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_btn_change_number_phone">

        <TextView
            android:id="@+id/settings_username"
            style="@style/normalText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/settings_btn_change_user_name"
            tools:text="@string/default_login" />

        <TextView
            android:id="@+id/settings_label_username"
            style="@style/smallText"
            android:text="@string/settings_label_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_username" />

        <View
            style="@style/separator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_label_username" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_bio"
        style="@style/SettingsButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_btn_change_user_name">

        <TextView
            android:id="@+id/settings_bio"
            style="@style/normalText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/settings_btn_change_bio"
            tools:text="@string/settings_default_bio" />

        <TextView
            android:id="@+id/settings_label_bio"
            style="@style/smallText"
            android:text="@string/settings_label_bio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_bio" />

        <View
            style="@style/separator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_label_bio" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/setting_change_photo"
        android:layout_width="@dimen/setting_change_photo_width"
        android:layout_height="@dimen/setting_change_photo_height"
        android:layout_marginEnd="@dimen/app_margin"
        android:src="@drawable/camera3"
        app:civ_border_color="@color/colorGrey"
        app:layout_constraintBottom_toBottomOf="@id/settings_header_blovk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_header_blovk" />


</androidx.constraintlayout.widget.ConstraintLayout>



