<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screens.registr.EnterCodeFragment">

    <ImageView
        android:id="@+id/registr_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="@dimen/vertical_large_marge"
        android:contentDescription="@string/status"
        android:src="@drawable/regist_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/regist_text_enter_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/registr_enter_code"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/normaltext"
        android:textStyle="bold"
        android:layout_margin="@dimen/app_small_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registr_image" />
    <TextView
        android:id="@+id/registr_text_we_sent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/smallText"
        android:text="@string/registr_text_we_send"
        android:layout_margin="@dimen/app_small_margin"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/regist_text_enter_code"/>




    <com.chaos.view.PinView
        android:id="@+id/registr_input_code"
        style="@style/PinWidget.PinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:cursorVisible="true"
        android:gravity="center"
        android:inputType="number"
        android:itemBackground="#9EA6AE"
        app:hideLineWhenFilled="false"
        app:itemCount="6"
        app:itemHeight="50dp"
        app:itemRadius="10dp"
        app:lineColor="#56A1EC"
        app:itemWidth="50dp"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registr_text_we_sent" />


</androidx.constraintlayout.widget.ConstraintLayout>